--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,15 @@
-Flask
-Flask-CORS
-langchain
-langchain-groq
-chromadb
-sentence-transformers
-pypdf
-python-dotenv
-pandas
-numpy
-python-dateutil
-PyMuPDF
-Pillow
+flask==2.3.3
+flask-cors==4.0.0
+werkzeug==2.3.7
+markupsafe==2.1.3
+PyMuPDF==1.23.26
+Pillow==10.0.1
+numpy==1.24.4
+tensorflow==2.13.0
+langchain==0.0.354
+langchain-groq==0.0.3
+langchain-community==0.0.13
+langchain-huggingface==0.0.3
+chromadb==0.4.18
+sentence-transformers==2.2.2
+markdown-it-py==3.0.0
