--- a/myenv/pyvenv.cfg
+++ b/myenv/pyvenv.cfg
@@ -1,5 +1,5 @@
-home = C:\Users\koush\AppData\Local\Programs\Python\Python312
+home = /Library/Frameworks/Python.framework/Versions/3.11/bin
 include-system-site-packages = false
-version = 3.12.7
-executable = C:\Users\koush\AppData\Local\Programs\Python\Python312\python.exe
-command = C:\Users\koush\AppData\Local\Programs\Python\Python312\python.exe -m venv C:\Users\koush\Desktop\material-electrical-chatbot\myenv
+version = 3.11.0
+executable = /Library/Frameworks/Python.framework/Versions/3.11/bin/python3.11
+command = /Users/fatimasyed/PycharmProjects/Adnoc-chatbot/.venv/bin/python3 -m venv /Users/fatimasyed/PycharmProjects/Adnoc-chatbot/myenv
